# ChromaEdit

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  run_main.sh  test.sh
.github/workflows/: cmake.yml
foundation/: main.cpp
foundation/include/: image_editor.hpp  reader.hpp
foundation/src/: image_editor.cpp  reader.cpp
foundation/test/: image_editor.test.cpp  reader.test.cpp
